syntax = "proto2";
package rpc;
option go_package = "initialthree/protocol/ss/rpc";
import "ss/proto/rpc/common.proto";

message enterMap_req {
	optional string   userID       = 1;
	optional position pos          = 2;
	optional string   gameAddr     = 3;    //玩家所在game节点
	optional string   gateAddr     = 4;
	optional uint64   gateUid      = 5;
	optional uint64   ID           = 6;   // 角色ID
	optional int32    sceneIdx     = 7;   //
}

message enterMap_resp {
	optional bool    ok    = 1;
}
